# fast_tex_parser

./: .gitignore  CMakeLists.txt  README.md  __init__.pyi  setup.py
include/: fast_tex_parser.h  parse_item.h  tex_element.h
src/: fast_tex_parser.cpp  parse_item.cpp  tex_element.cpp
